# omnisette-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  setup-omnisette-ansible.yaml
.github/workflows/: build.yml  docker-publish.yml
src/: main.rs  provider_instance.rs  provisioning_session.rs  result.rs  tests.rs
